# Data_Engineer_projects

./: README.md  pyproject.toml
data/: countries.parquet  my_database.db
notebooks/: guide_on_duckdb.ipynb
