[tool.poetry]
name = "data_eng_project_venv"
version = "0.0.1"
description = "Python environment for this repository"
authors = ["tabsa <tas.tiago.sousa@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tabsa/Data_Engineer_projects/guide_on_duckdb"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=1.0.0"
duckdb = "*"
ipykernel = "*"
jupyter = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
mypy = "*"
wheel = "*"
setuptools = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
